--- a/css/styles.css
+++ b/css/styles.css
@@ -306,6 +306,11 @@ nav img{
         
     }
 
+    .plan_title{
+        width: 100%;
+        
+    }
+
     .bar_blue{
         width: 93%;
     }
