--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,88 @@
 * {font-family: 'Alef'; margin:0; padding:0;}
 
+.margin_top {
+    margin-top: 10%;
+}
+
+.margin_left {
+    margin-left: 5%;
+
+}
+
+.margin_left_right{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 2%;
+
+}
+
+body {
+    background-color: #f6f8fa;    
+}
+.main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+
+}
+
+.card-r {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+    max-width: 300px;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
+
 body{
     overflow-x: hidden;
 }
@@ -38,6 +121,7 @@ nav {
 
 nav ul {
     list-style-type: none;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -57,6 +141,7 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #ffffff;
+    text-decoration: none;
 }
 
 li.selected a{
@@ -67,13 +152,153 @@ li.selected a{
     font-size: 24px;
 }
 
-.jack {
+.profile_img {
     border-radius: 50%;
 }
 
 nav img{
     width: 47px;
     height: 47px;
+}
+
+.btn-info{
+    margin-left: 20px;
+    background-color: #004AAD;
+    border-color: #004AAD;
+}
+
+.custom-list {
+    list-style: none;
+    padding: 0;
+}
+
+.custom-list li {
+    padding-left: 30px;
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: left center;
+    background-image: url('../images/start_selected.png'); /* Replace 'images/start.jpg' with your image path */
+    margin-bottom: 10px;
+    line-height: 1.5;
+}
+
+.list-group-item i.fa-circle {
+    font-size: 10px;
+}
+
+.list-group-item .text-dot-red {
+    color: #9d261d;
+}
+
+.list-group-item .text-dot-gray {
+    color: #777777;
+}
+
+.list-group-item .text-dot-yellow {
+    color: #ffc40d;
+}
+
+.text-secondary-r {
+
+    font-weight: bold;
+    color: green !important;
+
+}
+
+.text-secondary-negative {
+    font-weight: bold;
+    color: red !important;
+
+}
+
+/* .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+} */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-width: 500px;
+    width: 90%;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.modal-content h2 {
+    margin-top: 0;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.form-control {
+    width: 95%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.close {
+    position: absolute;
+    top: 1%;
+    right: 2%;
+    font-size: 28px;
+    font-weight: bold;
+    color: #888;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: #000;
 }
 
 .plans_wrapper{
@@ -98,12 +323,13 @@ nav img{
 }
 
 .plan{
-    background-color: #EEEEEE;
+    background-color: #dddddd;
     width: 465px;
     height: 310px;
     margin-bottom: 50px;
     margin-right: 200px;
     border-radius: 20px;
+    transition: height 0.2s ease;
 }
 
 .crop {
@@ -136,6 +362,7 @@ nav img{
 }
 
 .plan_bottom{
+    transition: height 0.2s ease;
     width: 465px;
     height: 94px;
 }
@@ -202,11 +429,23 @@ nav img{
 }
 
 .plan_details{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 100%;
+    height: 290px;
+}
+
+.plan.expanded .plan_details {
+    display: flex;
+}
+
+.plan.expanded .plan_bottom {
+    height: 400px;
+}
+
+.plan.expanded {
+    height: 600px;
 }
 
 .exercises_list_div{
@@ -218,7 +457,8 @@ nav img{
 }
 
 .plan_bottom form{
-    height: 72%;
+    height: 50%;
+    width: 35%;
 }
 
 .plan_text_div{
@@ -235,11 +475,27 @@ nav img{
     width: 100%;
 }
 
+.buttons{
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+}
+
+.submit_button.create-button{
+    width: 465px;
+    height: 100px;
+    margin-left: 5%;
+    font-size: 28px;
+}
+
 .button_div{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    height: 70%;
+}
+
+form.submit_button {
     width: 100%;
     height: 100%;
 }
@@ -249,18 +505,26 @@ nav img{
     background-color: #004AAD;
     border-radius: 30px;
     font-size: 100%;
-    width: 30%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     margin-bottom: 2%;
 }
 
 /* Styles for mobile */
 @media screen and (max-width: 768px) {
+    main{
+        margin-top: 30%;
+        margin-bottom: 20%;
+    }
+
     #logo{
         position: fixed;
         width: 100%;
-        height: 13.6%;
-        background-image: url(../images/logo2.png);
+        max-width: 100%;
+        max-height: 192px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-image: url(../images/logo2.jpg);
     }
 
     header{
@@ -270,14 +534,17 @@ nav img{
         min-width: 0px;
         height: unset;
     }
-
-    .menu {
-        font-size: 14px;
-    }
     
     nav img{
         width: 26px;
         height: 26px;
+    }
+
+    nav ul{
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: flex-start;
     }
 
     .plans_wrapper{
@@ -309,6 +576,14 @@ nav img{
     .plan_title{
         width: 100%;
         
+    }
+    
+    .modal {
+        top: 20%;
+    }
+
+    .menu {
+        font-size: 14px;
     }
 
     .bar_blue{
